<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">


    <include layout="@layout/content_main" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="434dp"
        android:fontFamily="serif"
        android:text="@string/title"
        android:textColor="@color/fontscolor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/RXNT"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="392dp"
        android:background="#D8D4C8"
        android:gravity="left"
        android:fontFamily="serif"
        android:text="@string/RXNT"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/FeedScrew"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="356dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:gravity="left"
        android:text="@string/FeedScrew"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/SmartStorage"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="317dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/SmartStorage"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/EasyAdj"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="283dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/EasyAdj"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/MultiLane"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="244dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/MultiLane"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Unison"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="207dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/Unison"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/UnisonAuto"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="169dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/UnisonAuto"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Videos"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="58dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/Videos"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Thumbs"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="93dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/Thumbs"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

    <Button
        android:id="@+id/UniCap"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="129dp"
        android:background="#D8D4C8"
        android:fontFamily="serif"
        android:text="@string/UniCap"
        android:textColor="@color/fontscolor"
        android:textSize="10dp"
        android:gravity="left"
        android:textStyle="bold" />

</RelativeLayout>